Fix header's z-index

--- a/src/layouts/isomorphic/_header.scss
+++ b/src/layouts/isomorphic/_header.scss
@@ -1,5 +1,6 @@
 .Page-header {
   position: relative;
+  z-index: 1;
   padding: {
     right: 15px;
     left: 15px;
